--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme: jekyll-theme-hacker
 
-title: Paul Welch
-description: Software Developer
+title: null
+# description:
 
 show_downloads: false
 show_header: false
